// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper renders correctly 1`] = `
<DocumentFragment>
  .emotion-9 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
}

.emotion-2 {
  border: 0;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  border: 1px solid #d4dae7;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  padding-right: 16px;
  padding-left: 16px;
  position: relative;
  border-right-width: 0;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border-radius: 4px 0 0 4px;
  padding: 0 16px;
  border-right: 0 solid #d4dae7;
}

.emotion-2:hover > svg,
.emotion-2:focus > svg {
  fill: #4f0599;
}

.emotion-0 {
  fill: #dce1eb;
  vertical-align: middle;
  height: 28px;
  width: 28px;
  min-width: 28px;
  min-height: 28px;
}

.emotion-1 {
  position: absolute;
  font-size: 30px;
  top: 7px;
  font-weight: 500;
  color: #d4dae7;
  right: 0;
}

.emotion-5 {
  border: 0;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 1px solid #d4dae7;
  border-left-width: 0;
  border-right-width: 0;
}

.emotion-5.emotion-5 {
  padding-right: 8px;
  padding-left: 8px;
}

.emotion-5:active {
  opacity: 0.5;
}

.emotion-3 {
  pointer-events: none;
  color: #4a4f62;
  background-color: #fff;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.emotion-8 {
  border: 0;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  border: 1px solid #d4dae7;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  padding-right: 16px;
  padding-left: 16px;
  position: relative;
  border-left-width: 0;
  border-radius: 0 4px 4px 0;
  padding: 0 16px;
  border-left: 0 solid #d4dae7;
}

.emotion-8:hover > svg,
.emotion-8:focus > svg {
  fill: #4f0599;
}

.emotion-6 {
  position: absolute;
  font-size: 30px;
  top: 7px;
  font-weight: 500;
  color: #d4dae7;
  left: 0;
}

<div
    class="sui-box emotion-9"
  >
    <button
      aria-label="Minus"
      class="sui-box emotion-2"
      type="button"
    >
      <svg
        class="sui-box sc-ui-icon emotion-0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
      <span
        class="emotion-1"
      >
        |
      </span>
    </button>
    <button
      class="sui-box emotion-5"
      type="button"
    >
      <input
        class="emotion-3"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="emotion-3"
      >
        unit
      </span>
    </button>
    <button
      aria-label="Plus"
      class="sui-box emotion-8"
      type="button"
    >
      <span
        class="emotion-6"
      >
        |
      </span>
      <svg
        class="sui-box sc-ui-icon emotion-0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly disabled 1`] = `
<DocumentFragment>
  .emotion-9 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
}

.emotion-0 {
  fill: #dce1eb;
  vertical-align: middle;
  height: 28px;
  width: 28px;
  min-width: 28px;
  min-height: 28px;
}

.emotion-1 {
  position: absolute;
  font-size: 30px;
  top: 7px;
  font-weight: 500;
  color: #d4dae7;
  right: 0;
}

.emotion-6 {
  position: absolute;
  font-size: 30px;
  top: 7px;
  font-weight: 500;
  color: #d4dae7;
  left: 0;
}

.emotion-2 {
  border: 0;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  opacity: 0.5;
  border: 1px solid #d4dae7;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  padding-right: 16px;
  padding-left: 16px;
  position: relative;
  border-right-width: 0;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border-radius: 4px 0 0 4px;
  padding: 0 16px;
  border-right: 0 solid #d4dae7;
  background-color: #f6f5f7;
  border: none;
  color: #b2b6c3;
  opacity: 1;
  cursor: not-allowed;
}

.emotion-5 {
  border: 0;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 1px solid #d4dae7;
  border-left-width: 0;
  border-right-width: 0;
  background-color: #f6f5f7;
  border: none;
  color: #b2b6c3;
  opacity: 1;
  cursor: not-allowed;
}

.emotion-5.emotion-5 {
  padding-right: 8px;
  padding-left: 8px;
}

.emotion-5:active {
  opacity: 0.5;
}

.emotion-3 {
  pointer-events: none;
  color: #4a4f62;
  background-color: #fff;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  background-color: #f6f5f7;
  border: none;
  color: #b2b6c3;
  opacity: 1;
  cursor: not-allowed;
}

.emotion-8 {
  border: 0;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  opacity: 0.5;
  border: 1px solid #d4dae7;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  padding-right: 16px;
  padding-left: 16px;
  position: relative;
  border-left-width: 0;
  border-radius: 0 4px 4px 0;
  padding: 0 16px;
  border-left: 0 solid #d4dae7;
  background-color: #f6f5f7;
  border: none;
  color: #b2b6c3;
  opacity: 1;
  cursor: not-allowed;
}

<div
    class="sui-box emotion-9"
  >
    <button
      aria-label="Minus"
      class="sui-box emotion-2"
      disabled=""
      type="button"
    >
      <svg
        class="sui-box sc-ui-icon emotion-0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
      <span
        class="emotion-1"
      >
        |
      </span>
    </button>
    <button
      class="sui-box emotion-5"
      type="button"
    >
      <input
        class="emotion-3"
        disabled=""
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="emotion-3"
      >
        unit
      </span>
    </button>
    <button
      aria-label="Plus"
      class="sui-box emotion-8"
      disabled=""
      type="button"
    >
      <span
        class="emotion-6"
      >
        |
      </span>
      <svg
        class="sui-box sc-ui-icon emotion-0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders large size 1`] = `
<DocumentFragment>
  .emotion-9 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
}

.emotion-2 {
  border: 0;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  border: 1px solid #d4dae7;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  padding-right: 16px;
  padding-left: 16px;
  position: relative;
  border-right-width: 0;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border-radius: 4px 0 0 4px;
  padding: 0 16px;
  border-right: 0 solid #d4dae7;
}

.emotion-2:hover > svg,
.emotion-2:focus > svg {
  fill: #4f0599;
}

.emotion-0 {
  fill: #dce1eb;
  vertical-align: middle;
  height: 28px;
  width: 28px;
  min-width: 28px;
  min-height: 28px;
}

.emotion-1 {
  position: absolute;
  font-size: 30px;
  top: 7px;
  font-weight: 500;
  color: #d4dae7;
  right: 0;
}

.emotion-5 {
  border: 0;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 1px solid #d4dae7;
  border-left-width: 0;
  border-right-width: 0;
}

.emotion-5.emotion-5 {
  padding-right: 8px;
  padding-left: 8px;
}

.emotion-5:active {
  opacity: 0.5;
}

.emotion-3 {
  pointer-events: none;
  color: #4a4f62;
  background-color: #fff;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.emotion-8 {
  border: 0;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  border: 1px solid #d4dae7;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  padding-right: 16px;
  padding-left: 16px;
  position: relative;
  border-left-width: 0;
  border-radius: 0 4px 4px 0;
  padding: 0 16px;
  border-left: 0 solid #d4dae7;
}

.emotion-8:hover > svg,
.emotion-8:focus > svg {
  fill: #4f0599;
}

.emotion-6 {
  position: absolute;
  font-size: 30px;
  top: 7px;
  font-weight: 500;
  color: #d4dae7;
  left: 0;
}

<div
    class="sui-box emotion-9"
  >
    <button
      aria-label="Minus"
      class="sui-box emotion-2"
      type="button"
    >
      <svg
        class="sui-box sc-ui-icon emotion-0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
      <span
        class="emotion-1"
      >
        |
      </span>
    </button>
    <button
      class="sui-box emotion-5"
      type="button"
    >
      <input
        class="emotion-3"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="emotion-3"
      />
    </button>
    <button
      aria-label="Plus"
      class="sui-box emotion-8"
      type="button"
    >
      <span
        class="emotion-6"
      >
        |
      </span>
      <svg
        class="sui-box sc-ui-icon emotion-0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders small size 1`] = `
<DocumentFragment>
  .emotion-5 {
  border: 0;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 1px solid #d4dae7;
  border-left-width: 0;
  border-right-width: 0;
}

.emotion-5.emotion-5 {
  padding-right: 8px;
  padding-left: 8px;
}

.emotion-5:active {
  opacity: 0.5;
}

.emotion-3 {
  pointer-events: none;
  color: #4a4f62;
  background-color: #fff;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.emotion-9 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 32px;
}

.emotion-2 {
  border: 0;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  border: 1px solid #d4dae7;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  padding-right: 16px;
  padding-left: 16px;
  position: relative;
  border-right-width: 0;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border-radius: 4px 0 0 4px;
  padding: 0 4px;
  border-right: 1px solid #d4dae7;
}

.emotion-2:hover > svg,
.emotion-2:focus > svg {
  fill: #4f0599;
}

.emotion-0 {
  fill: #dce1eb;
  vertical-align: middle;
  height: 18px;
  width: 18px;
  min-width: 18px;
  min-height: 18px;
}

.emotion-1 {
  position: absolute;
  font-size: 30px;
  top: 7px;
  font-weight: 500;
  color: #d4dae7;
  display: none;
  right: 0;
}

.emotion-8 {
  border: 0;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  border: 1px solid #d4dae7;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  padding-right: 16px;
  padding-left: 16px;
  position: relative;
  border-left-width: 0;
  border-radius: 0 4px 4px 0;
  padding: 0 4px;
  border-left: 1px solid #d4dae7;
}

.emotion-8:hover > svg,
.emotion-8:focus > svg {
  fill: #4f0599;
}

.emotion-6 {
  position: absolute;
  font-size: 30px;
  top: 7px;
  font-weight: 500;
  color: #d4dae7;
  display: none;
  left: 0;
}

<div
    class="sui-box emotion-9"
  >
    <button
      aria-label="Minus"
      class="sui-box emotion-2"
      type="button"
    >
      <svg
        class="sui-box sc-ui-icon emotion-0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
      <span
        class="emotion-1"
      >
        |
      </span>
    </button>
    <button
      class="sui-box emotion-5"
      type="button"
    >
      <input
        class="emotion-3"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="emotion-3"
      />
    </button>
    <button
      aria-label="Plus"
      class="sui-box emotion-8"
      type="button"
    >
      <span
        class="emotion-6"
      >
        |
      </span>
      <svg
        class="sui-box sc-ui-icon emotion-0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
